--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ body {
     height: 6vh;
     font-size: 20px;
     font-weight: bold;
+    text-align: center;
    
 }
 
@@ -57,6 +58,7 @@ body {
     height: 6vh;
     font-size: 20px;
     font-weight: bold;
+    text-align: center;
     
 }
 
